--- a/latex/Dockerfile
+++ b/latex/Dockerfile
@@ -9,8 +9,12 @@ RUN apt-get update && apt-get install -y \
 
 RUN mkdir /usr/share/plantuml
 RUN wget -O /usr/share/plantuml/plantuml.jar http://sourceforge.net/projects/plantuml/files/plantuml.jar/download
-RUN wget -O /usr/share/plantuml/batikAndFop.zip http://dl.dropbox.com/u/13064071/batikAndFop.zip
-RUN 7z e -o/usr/share/plantuml /usr/share/plantuml/batikAndFop.zip
+RUN wget -O /usr/share/plantuml/batik-bin-1.9.tar.gz http://apache.mirror.digionline.de/xmlgraphics/batik/binaries/batik-bin-1.9.tar.gz
+RUN tar -x -C /usr/share/plantuml -f /usr/share/plantuml/batik-bin-1.9.tar.gz
+RUN wget -O /usr/share/plantuml/batik-bin-1.9.tar.gz http://apache.mirror.digionline.de/xmlgraphics/batik/binaries/batik-bin-1.9.tar.gz
+RUN tar -x -C /usr/share/plantuml -f /usr/share/plantuml/batik-bin-1.9.tar.gz
+RUN wget -O /usr/share/plantuml/fop-2.2-bin.tar.gz http://apache.mirror.digionline.de/xmlgraphics/fop/binaries/fop-2.2-bin.tar.gz
+RUN tar -x -C /usr/share/plantuml -f /usr/share/plantuml/fop-2.2-bin.tar.gz
 
 ADD plantuml /usr/bin/plantuml
 ADD latexmkrc /root/.latexmkrc
